--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,5 +1,5 @@
 specVersion: 0.0.2
-description: Uniswap is a decentralized protocol for automated token exchange on Ethereum.
+description: Quickswap is a decentralized protocol for automated token exchange on Matic.
 repository: https://github.com/Uniswap/uniswap-v2-subgraph
 schema:
   file: ./schema.graphql
@@ -8,9 +8,9 @@ dataSources:
     name: Factory
     network: mainnet
     source:
-      address: '0x5C69bEe701ef814a2B6a3EDD4B1652CB9cc5aA6f'
+      address: '0x5757371414417b8C6CAad45bAeF941aBc7d3Ab32'
       abi: Factory
-      startBlock: 10000834
+      startBlock: 4931780
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.3
