--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "codegen": "graph codegen --output-dir src/types/",
     "build": "graph build",
-    "create-local": "graph create sameepsi/quickswap --node https://api.thegraph.com/deploy/",
-    "deploy-local": "graph deploy SAMEEPSI/quickswap --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --debug",
+    "create-local": "graph create sameepsi/quickswap --node http://127.0.0.1:8020/",
+    "deploy-local": "graph deploy sameepsi/quickswap --ipfs http://localhost:5001 --node http://127.0.0.1:8020/ --debug",
     "deploy": "graph deploy --access-token c90876740d3d4648802b67ef6373e8cc --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ sameepsi/quickswap",
     "deploy-staging": "graph deploy $THE_GRAPH_GITHUB_USER/$THE_GRAPH_SUBGRAPH_NAME /Uniswap --ipfs https://api.staging.thegraph.com/ipfs/ --node https://api.staging.thegraph.com/deploy/",
     "watch-local": "graph deploy graphprotocol/Uniswap2 --watch --debug --node http://127.0.0.1:8020/ --ipfs http://localhost:5001"
