--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "repository": "https://github.com/sameepsi/quickswapv2-subgraph",
   "license": "GPL-3.0-or-later",
   "scripts": {
+    "auth": "graph auth https://api.thegraph.com/deploy/ <access_token>",
     "codegen": "graph codegen --output-dir src/types/",
     "build": "graph build",
     "remove-local": "graph remove sameepsi/quickswap --node http://127.0.0.1:8020/",
@@ -14,8 +15,9 @@
     "deploy03": "graph deploy --access-token d0e3ef499e5447f6ab11f8652e044083 --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ sameepsi/quickswap03",
     "deploy05": "graph deploy --access-token 22155bca882a4af792add2cdc940dbf4 --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ sameepsi/quickswap05",
     "deploy06": "graph deploy --access-token 22155bca882a4af792add2cdc940dbf4 --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ sameepsi/quickswap06",
+    "deploy-gen": "graph deploy --access-token $GRAPH_TOKEN --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ $GITHUB_USER/$SUBGRAPH_NAME", 
     "deploy-staging": "graph deploy $THE_GRAPH_GITHUB_USER/$THE_GRAPH_SUBGRAPH_NAME /Uniswap --ipfs https://api.staging.thegraph.com/ipfs/ --node https://api.staging.thegraph.com/deploy/",
-    "watch-local": "graph deploy graphprotocol/Uniswap2 --watch --debug --node http://127.0.0.1:8020/ --ipfs http://localhost:5001"
+    "watch-local": "graph deploy graphprotocol/Uniswap --watch --debug --node http://127.0.0.1:8020/ --ipfs http://localhost:5001"
   },
   "devDependencies": {
     "@graphprotocol/graph-cli": "^0.16.0",
