--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "remove-local": "graph remove sameepsi/quickswap --node http://127.0.0.1:8020/",
     "create-local": "graph create sameepsi/quickswap --node http://127.0.0.1:8020/",
     "deploy-local": "graph deploy sameepsi/quickswap --ipfs https://api.thegraph.com/ipfs/ --node http://127.0.0.1:8020/ --debug",
-    "deploy": "graph deploy --access-token <access_token> --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ sameepsi/quickswap",
+    "deploy": "graph deploy --access-token 22155bca882a4af792add2cdc940dbf4 --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ sameepsi/quickswap",
     "deploy02": "graph deploy --access-token <access_token> --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ sameepsi/quickswap02",
     "deploy03": "graph deploy --access-token d0e3ef499e5447f6ab11f8652e044083 --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ sameepsi/quickswap03",
     "deploy05": "graph deploy --access-token 22155bca882a4af792add2cdc940dbf4 --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ sameepsi/quickswap05",
