--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -6,7 +6,7 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: Factory
-    network: matic
+    network: mainnet
     source:
       address: '0xC3550497E591Ac6ed7a7E03ffC711CfB7412E57F'
       abi: Factory
@@ -34,7 +34,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: Pair
-    network: matic
+    network: mainnet
     source:
       abi: Pair
     mapping:
