--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "deploy05": "graph deploy --access-token d0e3ef499e5447f6ab11f8652e044083 --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ sameepsi/quickswap05",
     "deploy-staging": "graph deploy $THE_GRAPH_GITHUB_USER/$THE_GRAPH_SUBGRAPH_NAME /Uniswap --ipfs https://api.staging.thegraph.com/ipfs/ --node https://api.staging.thegraph.com/deploy/",
     "watch-local": "graph deploy graphprotocol/Uniswap2 --watch --debug --node http://127.0.0.1:8020/ --ipfs http://localhost:5001",
-    "deploymurai": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ totop716/quickswap-v2"
+    "deploymurai": "graph deploy --product hosted-service totop716/quickswap-v2"
   },
   "devDependencies": {
     "@graphprotocol/graph-cli": "^0.46.1",
